# AI-Agents-Orchestrator

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ADD_AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  COMPLETE_GUIDE.md  CONTRIBUTING.md  CONVERSATION_MODE.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FEATURES.md  Jenkinsfile  Makefile  PRODUCTION_CHECKLIST.md  README.md  README_PRODUCTION.md  SETUP.md  SETUP_GUIDE.md  UI_SETUP.md  ai-orchestrator  ai-orchestrator-wrapper  docker-compose.yml  pyproject.toml  requirements.txt  setup-env.sh  setup.py  start-ui.sh
.circleci/: config.yml
.claude/: settings.local.json
.github/: SECURITY.md
.github/workflows/: azure-deploy.yml  ci.yml  docker.yml  release.yml
adapters/: __init__.py  base.py  claude_adapter.py  cli_communicator.py  codex_adapter.py  copilot_adapter.py  gemini_adapter.py
config/: agents.yaml
deployment/: DEPLOYMENT.md  README.md
deployment/azure/: README.md
deployment/azure/scripts/: deploy.sh
deployment/azure/terraform/: main.tf  variables.tf
deployment/kubernetes/: blue-green-deployment.yaml  canary-deployment.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress-nginx.yaml  monitoring.yaml  network-policy.yaml  production-config.yaml  pvc.yaml  secrets.yaml.template  service.yaml
deployment/load-balancer/: haproxy.cfg  nginx.conf
deployment/scripts/: blue-green-switch.sh  canary-rollout.sh
deployment/systemd/: ai-orchestrator.service
docs/: PROGRESS_LOGS.md  USAGE_PROGRESS_LOGS.md  architecture.md  interactive-shell.md
examples/: sample_tasks.md
orchestrator/: __init__.py  async_executor.py  cache.py  config_manager.py  core.py  exceptions.py  health.py  logging_config.py  metrics.py  retry.py  security.py  shell.py  task_manager.py  workflow.py
scripts/: install.sh  test.sh
tests/: conftest.py  test_adapters.py  test_exceptions.py  test_integration.py  test_orchestrator.py  test_security.py  test_shell.py
ui/: README.md  app.py  requirements.txt  test_logs.py
ui/frontend/: .env.local  index.html  nuxt.config.ts  package-lock.json  package.json  vite.config.js
ui/frontend/src/: App.vue  style.css
ui/frontend/src/components/: MainContent.vue  MonacoEditor.vue  Sidebar.vue  StatusBadge.vue
ui/frontend/src/stores/: orchestrator.js
ui/templates/: index.html
